CalligraDB: Connection::lastInsertedAutoIncValue: escape <table> and <name> in "SELECT <table>.<name> FROM <table>"

BUG:364810